--- a/style.css
+++ b/style.css
@@ -7,67 +7,142 @@
 
 html {
     background-color: #E5E5E5;
+    font-family: 'Open Sans';
+    color:#43295a
      
 }
 
 header {
-    width: 100%;
+    width: 100vw;
     display: flex;
     height: 125px;
     align-content: space-between; /*vertical-align*/
     justify-content: space-between; /*horizontal-align*/
     box-shadow: 1px 6px 19px 0px rgba(0,0,0,0.75);
-    position: absolute;
+    position: fixed;
     background-color: #E5E5E5;
 
 
 }
 
-.logo {
-    width: 25%;
-
-} 
-
-
-nav {
+.logo img{
+    height: 100%;
     
-    width: 50%;
-    height: 125px;
+}
+
+
+nav {    
+    width: 50vw;
+    height: 100%;
     display: flex;
-    padding: 0 75px
+    padding: 2rem;
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 21px;
+    justify-items: center;
 
 }
 
 ul {
     list-style: none;
+    line-height:normal;
 }
 
 nav ul {
     display: flex;
-    width: 100%;
+    width: 100vw;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 1.8rem
     
 }
 
 
 
 .end-top {
-    width: 25%;
+    width: 25vw;
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    gap: 16px;
-    margin-right: 10px;
+    gap: 1.8rem;
+    margin-right: 24px;
+}
 
+#search {
+    background-color: #E5E5E5;
+    border-radius: 4px;
+    border-bottom: 0.5px solid  rgba(67,41,90,0.42);
+    display: inline;
+    justify-content: space-between;
+    
+}
+
+#search:hover {
+    box-shadow: 0px 0px 2px 1px rgba(67,41,90,0.42);
 
 }
 
+#search input {
+    float:left;
+    margin-left: 5px;
+    background-color: transparent;
+    font-size: 1.4rem;
+    border:none;
+    width: 50%;
+    height: 24px;
+}
+
+
+
+input:focus {
+    box-shadow: 0 0 0 0;
+    outline: 0;
+}
+
+i {
+    color: #43295a;
+    font-size: 1.6rem;
+}
+
+#search i {
+    margin-right: 5px;
+}
+
+    
 
 .backdrop img {
-    margin-top: 125px;
-    max-width: 1500px; /* esse é o maximo que e meu main vai ter*/
-    width: 100%; /* caso o minha tela tenha menos de 580px o meu main vai ter 90% do tamanho */
+    margin-top: 8%;
+    width: 100vw; /* caso o minha tela tenha menos de 580px o meu main vai ter 90% do tamanho */
 
 }
-    
+
+
+@media (max-width: 475px) {
+    html {
+        font-size: 30%;
+    }
+
+    header {
+    height: 50px
+    }
+}
+
+@media (min-width: 724px) and   (max-width:1024px) {
+    html {
+        font-size: 56%;
+    }
+    header {
+    height: 100px
+    }
+}
+
+@media (min-width: 2000px) {
+    html {
+        font-size: 150%;
+    }
+    header {
+    height: 200px
+    }
+}
+
+
