--- a/style.css
+++ b/style.css
@@ -53,11 +53,22 @@ nav ul {
     width: 100vw;
     align-items: center;
     justify-content: center;
-    gap: 1.8rem
+    gap: 1.8rem;
     
 }
 
 
+nav a:visited {
+    color: #43295a;
+    
+}
+
+/* nav a li:: {
+    border-top: 1px solid #43295a;
+    border-bottom: 1px solid #43295a;
+    }
+ */
+    
 
 .end-top {
     width: 25vw;
@@ -123,7 +134,7 @@ i {
     }
 
     header {
-    height: 50px
+        height: 50px
     }
 }
 
@@ -132,7 +143,7 @@ i {
         font-size: 56%;
     }
     header {
-    height: 100px
+        height: 100px
     }
 }
 
@@ -141,8 +152,25 @@ i {
         font-size: 150%;
     }
     header {
-    height: 200px
+        height: 200px
     }
 }
 
+
+.info ul{
+    display: flex;
+}
+
+.info ul li{
+    margin-top: 2.4rem;
+    display: flex;
+    justify-content: center ;
+    gap: 1.6em;
+    width: 100vw;
+}
+
+.info-compra {
+    display: block;
+     gap: 1.6em;
+}
 
