--- a/style.css
+++ b/style.css
@@ -167,10 +167,101 @@ i {
     justify-content: center ;
     gap: 1.6em;
     width: 100vw;
+    align-content: center
 }
 
 .info-compra {
     display: block;
-     gap: 1.6em;
+    gap: 1.6em;
 }
+
+.products-index h2{
+    font-size: 2rem;
+    text-align: center;
+    margin: 2.4rem;
+}
+
+.container-products {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    width: 100vw;
+    justify-content: center;
+   }
+
+.container-products img {
+    border-radius: 8px;
+    width: 18rem;
+    box-shadow: 6px 9px 26px -7px #949494 ;
+
+}
+
+.product{
+    font-size: 0.8rem ;
+    text-align: center;
+
+}
+
+.name-products {
+    margin-top: 1.2rem;
+}
+
+.price-products {
+    margin-top: 0.5rem;
+
+}
+
+.instgram {
+    display: grid;
+    width: 100vw;
+    justify-content: center;
+    margin-top:1.2rem;
+    margin-bottom: 1.2rem;
+    background-color:  #c4b4d5;
+    font-size: 1.2rem;
+}
+
+
+.insta-logo{
+    display: flex;
+    margin-top:0.5rem;
+    gap: 0.5em;
+    width: min-content;
+    align-content: center;
+}
+
+a {
+    width: min-content;
+    display: flex;
+    justify-self: center;
+}
+
+a:link {
+    text-decoration: none
+}
+
+.instgram p {
+    text-align: center;
+    font-weight: bold;
+    margin-bottom:0.5rem;
+    color: #43295a;
+
+}
+
+.instgram button {
+    margin-bottom: 0.5rem;
+    background-color: #E5E5E5;
+    border-radius: 8px;
+    border: 0.5px solid  rgba(67,41,90,0.42);
+    display: inline;
+    align-content: space-between;
+    font-size: 0.8rem;
+    height: 2rem;
+    width: 100px;
+    justify-self: center;
+    
+    
+}
+
+
 
