--- a/style.css
+++ b/style.css
@@ -15,20 +15,30 @@ html {
 header {
     width: 100vw;
     display: flex;
-    height: 125px;
+    height: 100px;
     align-content: space-between; /*vertical-align*/
     justify-content: space-between; /*horizontal-align*/
     box-shadow: 1px 6px 19px 0px rgba(0,0,0,0.75);
     position: fixed;
     background-color: #E5E5E5;
+    color:#43295a;
 
 
 }
 
+a:link {
+    text-decoration: none;
+    color: #43295a;
+}
+
+
 .logo {
     width: 25%;
-
 } 
+
+.logo img {
+    height: 100px
+}
 
 
 nav {    
@@ -36,10 +46,11 @@ nav {
     height: 100%;
     display: flex;
     padding: 2rem;
-    font-weight: 400;
-    font-size: 1.4rem;
+    font-size: 1rem;
     line-height: 21px;
     justify-items: center;
+    align-content: center;
+    color: #43295a;
 
 }
 
@@ -53,7 +64,7 @@ nav ul {
     width: 100vw;
     align-items: center;
     justify-content: center;
-    gap: 1.8rem;
+    gap: 2.5rem;
     
 }
 
@@ -76,15 +87,16 @@ nav a:visited {
     align-items: center;
     justify-content: flex-end;
     gap: 1.8rem;
-    margin-right: 24px;
+    margin-right: 3rem;
+    font-size: 1.4rem;
 }
 
 #search {
     background-color: #E5E5E5;
     border-radius: 4px;
     border-bottom: 0.5px solid  rgba(67,41,90,0.42);
-    display: inline;
-    justify-content: space-between;
+    display: flex;
+    justify-content: space-around;
     
 }
 
@@ -97,11 +109,12 @@ nav a:visited {
     float:left;
     margin-left: 5px;
     background-color: transparent;
-    font-size: 1.4rem;
+    font-size: 1rem;
     border:none;
-    width: 50%;
-    height: 24px;
+    color: #43295a;
+    width: 70%;
 }
+
 
 
 
@@ -110,19 +123,20 @@ input:focus {
     outline: 0;
 }
 
-i {
+nav i {
     color: #43295a;
-    font-size: 1.6rem;
+    
 }
 
 #search i {
-    margin-right: 5px;
+    align-self: center;
+
 }
 
     
 
 .backdrop img {
-    margin-top: 8%;
+    margin-top: 5%;
     width: 100vw; /* caso o minha tela tenha menos de 580px o meu main vai ter 90% do tamanho */
 
 }
@@ -217,45 +231,14 @@ i {
 
 }
 
-.instgram {
-    display: grid;
+.ver-produtos {
+
     width: 100vw;
+    display: flex;
     justify-content: center;
-    margin-top:1.2rem;
-    margin-bottom: 1.2rem;
-    background-color:  #c4b4d5;
-    font-size: 1.2rem;
 }
-
-
-.insta-logo{
-    display: flex;
-    margin-top:0.5rem;
-    gap: 0.5em;
-    width: min-content;
-    align-content: center;
-}
-
-a {
-    width: min-content;
-    display: flex;
-    justify-self: center;
-}
-
-a:link {
-    text-decoration: none
-}
-
-.instgram p {
-    text-align: center;
-    font-weight: bold;
-    margin-bottom:0.5rem;
-    color: #43295a;
-
-}
-
-.instgram button {
-    margin-bottom: 0.5rem;
+.ver-produtos button {
+    width: 20rem;
     background-color: #E5E5E5;
     border-radius: 8px;
     border: 0.5px solid  rgba(67,41,90,0.42);
@@ -263,8 +246,66 @@ a:link {
     align-content: space-between;
     font-size: 0.8rem;
     height: 2rem;
-    width: 100px;
     justify-self: center;
+    color: #43295a;
+   
+}
+
+.instgram {
+    display: grid;
+    width: 100vw;
+    height: 15rem;
+    justify-content: center;
+    justify-items: center;
+    margin-top:1.2rem;
+    margin-bottom: 1.2rem;
+    background-color:  #c4b4d5;
+    font-size: 1.2rem;
+    align-content: center;
+    gap: 1rem;
+
+}
+
+
+.insta-logo{
+    display: flex;
+    gap: 0.3rem;
+    width: min-content;
+    align-content: center;
+}
+
+.insta-logo a {
+    width: min-content;
+    display: flex;
+    justify-self: center;
+}
+
+
+
+.instgram a p {
+    text-align: center;
+    font-weight: bold;
+    color: #43295a;
+}
+
+.instgram a i {
+    text-align: center;
+    font-weight: bold;
+    margin-bottom:0.5rem;
+    color: #43295a;
+}
+
+.instgram button {
+    margin-bottom: 0.5rem;
+    background-color: #e5e5e550;
+    border-radius: 8px;
+    border: 0.5px solid  rgba(67,41,90,0.42);
+    align-content: space-between;
+    font-size: 0.8rem;
+    height: 2rem;
+    width: 10rem;
+    justify-self: center;
+    color: #43295a;
     
     
 }
