--- a/style.css
+++ b/style.css
@@ -67,11 +67,16 @@ ul {
     align-items: center;
     justify-content: center;
     gap: 1.5rem;
-    float: left;
-    
+
 
     
 }
+
+
+li.dropdown {
+    display: inline-block;
+  }
+
 
 .menu-secundario{
     position: absolute;
@@ -79,23 +84,24 @@ ul {
     width: 12rem;
     align-content: center;
     display: none;
-    box-shadow: -1px 23px 20px 0px rgba(0,0,0,0.35);
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     border-radius: 4px;
-
     
 }
 
-.principal-menu:hover ul, .menu-secundario li.over ul{
-    display: block;
-}
 .menu-secundario li {
     height: 2.5rem;
     align-items: center;
     margin-top: 1rem;
     margin-left: 1rem;
     font-size: 0.9rem ;
+    display: block;
     
 }
+
+.dropdown:hover .menu-secundario {
+    display: block;
+  }
 
 
 
