--- a/styles/cards.css
+++ b/styles/cards.css
@@ -12,6 +12,80 @@
 
 .container-products img {
     width: 200px
+} 
+    
+fieldset {
+    border: none;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.card-contato {
+    width: 40%;
+    margin-bottom: 2rem;
+    padding: 1rem;
+}
+
+.card-info {
+    background-color: var(--purple);
+    color: var(--gray50);
+    text-align: right;
+    line-height: 3rem;
+    border-radius: 8px 0px 0px 8px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    
+
+}
+
+.card-form{
+    background-color: var(--gray50);
+    border-radius: 0px 8px 8px 0px;
+    height: 100%;
+    color: var(--purple);
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+}
+
+.card-info h3{
+    font-size: 1.7rem;
+}
+
+.card-info p {
+    font-size: 1.3rem;
+}
+
+
+.card-form input {
+  border: 1px solid var(--purple);
+  border-top: 0px;
+  border-left: 0px;
+  border-right: 0px;
+  border-radius: 4px;
+  height: 2rem;
+}
+
+.card-form label {
+    font-size: 1.3rem
+}
+.card-form h3 {
+    font-size: 1.7rem
+}
+
+.gray50{
+    color: var(--gray50);
+}
+
+.gray-transparent{
+    margin-top: -650px;
+    height: 450px;
+    align-content: center;
 }
 
 
